Issues resolved. Achieved MVP.

--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -89,43 +89,43 @@
             <point key="canvasLocation" x="1049" y="453"/>
         </scene>
         <!--Journal-->
-        <scene sceneID="Gof-SW-MoC">
+        <scene sceneID="Pfq-fi-YQO">
             <objects>
-                <tableViewController id="emk-HO-9bz" customClass="EntriesTableViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="5CG-C7-Wg4">
+                <tableViewController id="uF7-9h-39v" customClass="EntriesTableViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="SEM-oK-7VL">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="111" id="z38-MH-iMd" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="111"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="100" id="2fd-q5-vVF" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="z38-MH-iMd" id="QGr-Je-F2I" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="111"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="2fd-q5-vVF" id="Wkj-wY-8r9">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="JAb-ia-OFN">
-                                            <rect key="frame" x="12" y="12" width="390" height="87"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="prD-sQ-kwN">
+                                            <rect key="frame" x="20" y="11" width="374" height="78"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="hiU-LL-0Bb">
-                                                    <rect key="frame" x="0.0" y="0.0" width="390" height="24"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="RkH-dt-abC">
+                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="24"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry Title" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ahl-zB-GSZ">
-                                                            <rect key="frame" x="0.0" y="0.0" width="314" height="24"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5h0-9T-Udv">
+                                                            <rect key="frame" x="0.0" y="0.0" width="334.66666666666669" height="24"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Timestamp" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V5x-84-hN5">
-                                                            <rect key="frame" x="318" y="0.0" width="72" height="24"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Do-WD-64J">
+                                                            <rect key="frame" x="338.66666666666669" y="0.0" width="35.333333333333314" height="24"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
                                                 </stackView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Entry Text" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IEk-Fe-2T7">
-                                                    <rect key="frame" x="0.0" y="28" width="390" height="59"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xCl-vR-3Sa">
+                                                    <rect key="frame" x="0.0" y="28" width="374" height="50"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -134,35 +134,35 @@
                                         </stackView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="JAb-ia-OFN" firstAttribute="leading" secondItem="QGr-Je-F2I" secondAttribute="leading" constant="12" id="8pm-U1-g5w"/>
-                                        <constraint firstItem="JAb-ia-OFN" firstAttribute="top" secondItem="QGr-Je-F2I" secondAttribute="top" constant="12" id="JMM-R9-M9m"/>
-                                        <constraint firstAttribute="trailing" secondItem="JAb-ia-OFN" secondAttribute="trailing" constant="12" id="Ub9-Nb-jRw"/>
-                                        <constraint firstAttribute="bottom" secondItem="JAb-ia-OFN" secondAttribute="bottom" constant="12" id="qgI-3B-Jk1"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="prD-sQ-kwN" secondAttribute="bottom" id="8ie-H2-1jh"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="prD-sQ-kwN" secondAttribute="trailing" id="McK-aI-IpY"/>
+                                        <constraint firstItem="prD-sQ-kwN" firstAttribute="leading" secondItem="Wkj-wY-8r9" secondAttribute="leadingMargin" id="TMb-ol-WXf"/>
+                                        <constraint firstItem="prD-sQ-kwN" firstAttribute="top" secondItem="Wkj-wY-8r9" secondAttribute="topMargin" id="XVY-ik-wUf"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="entryTextLabel" destination="IEk-Fe-2T7" id="b1a-uc-s50"/>
-                                    <outlet property="entryTitle" destination="Ahl-zB-GSZ" id="BDF-r4-YK8"/>
-                                    <outlet property="timestampLabel" destination="V5x-84-hN5" id="9bL-pF-FRh"/>
+                                    <outlet property="entryTextLabel" destination="xCl-vR-3Sa" id="qUy-NR-5Kt"/>
+                                    <outlet property="entryTitle" destination="5h0-9T-Udv" id="sDo-h5-j4z"/>
+                                    <outlet property="timestampLabel" destination="4Do-WD-64J" id="YJa-GM-ppw"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="emk-HO-9bz" id="oG3-5a-JE1"/>
-                            <outlet property="delegate" destination="emk-HO-9bz" id="Ygs-qS-xTL"/>
+                            <outlet property="dataSource" destination="uF7-9h-39v" id="h8b-6F-1D1"/>
+                            <outlet property="delegate" destination="uF7-9h-39v" id="tFr-Lg-WAP"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Journal" id="HRI-Ax-VJ5">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Mjz-U5-4CP">
+                    <navigationItem key="navigationItem" title="Journal" id="8Vf-be-9DM">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Ufa-Ms-lhJ">
                             <connections>
-                                <segue destination="xqV-f3-VBa" kind="presentation" modalPresentationStyle="fullScreen" id="Uaw-xh-vWI"/>
+                                <segue destination="xqV-f3-VBa" kind="presentation" modalPresentationStyle="fullScreen" id="lT3-E1-aQc"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2BS-7A-WAM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qHD-xb-YGN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1047.8260869565217" y="-275.22321428571428"/>
+            <point key="canvasLocation" x="1048" y="-275"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Qv0-zh-1Ts">
@@ -193,7 +193,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="emk-HO-9bz" kind="relationship" relationship="rootViewController" id="NF4-yy-jUg"/>
+                        <segue destination="uF7-9h-39v" kind="relationship" relationship="rootViewController" id="1Rb-Aw-tQZ"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QNJ-2e-V6E" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
