Added segmented control

--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -15,32 +15,46 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="IXf-yt-hXV">
-                                <rect key="frame" x="32" y="110" width="350" height="271"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="IXf-yt-hXV">
+                                <rect key="frame" x="20" y="107.99999999999997" width="374" height="366.33333333333326"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pGY-V9-T7x">
-                                        <rect key="frame" x="0.0" y="0.0" width="166.66666666666666" height="34"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mood" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UnH-XL-VoO">
+                                        <rect key="frame" x="0.0" y="56.000000000000007" width="374" height="20.333333333333336"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="NO9-7t-WxX">
+                                        <rect key="frame" x="0.0" y="98.333333333333343" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="Happy"/>
+                                            <segment title="Neutral"/>
+                                            <segment title="Sad"/>
+                                        </segments>
+                                    </segmentedControl>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="9fz-7z-UgX">
-                                        <rect key="frame" x="0.0" y="56" width="350" height="215"/>
+                                        <rect key="frame" x="0.0" y="151.33333333333331" width="374" height="215"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ENTRY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AEu-c3-axg">
-                                                <rect key="frame" x="0.0" y="0.0" width="350" height="17"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="17"/>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GJE-Z0-XwP">
-                                                <rect key="frame" x="0.0" y="25" width="350" height="2"/>
+                                                <rect key="frame" x="0.0" y="25" width="374" height="2"/>
                                                 <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="2" id="2Ab-jz-0CI"/>
                                                 </constraints>
                                             </view>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="a6m-HS-mVq">
-                                                <rect key="frame" x="0.0" y="35" width="350" height="180"/>
+                                                <rect key="frame" x="0.0" y="35" width="374" height="180"/>
                                                 <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="180" id="7nV-dn-GRa"/>
@@ -52,18 +66,13 @@
                                         </subviews>
                                     </stackView>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="9fz-7z-UgX" secondAttribute="trailing" id="4Js-Ab-lsw"/>
-                                    <constraint firstAttribute="bottom" secondItem="9fz-7z-UgX" secondAttribute="bottom" id="jdz-x7-327"/>
-                                    <constraint firstItem="9fz-7z-UgX" firstAttribute="leading" secondItem="IXf-yt-hXV" secondAttribute="leading" id="nO3-qw-thp"/>
-                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="IXf-yt-hXV" secondAttribute="trailing" constant="32" id="Jj9-nR-RVu"/>
-                            <constraint firstItem="IXf-yt-hXV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="22" id="SvN-It-KGu"/>
-                            <constraint firstItem="IXf-yt-hXV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="32" id="k3M-vB-Nvo"/>
+                            <constraint firstItem="IXf-yt-hXV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="3uw-O7-B56"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="IXf-yt-hXV" secondAttribute="trailing" constant="20" id="UGF-Is-d5s"/>
+                            <constraint firstItem="IXf-yt-hXV" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="qNh-Tl-Aql"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -82,6 +91,7 @@
                     <connections>
                         <outlet property="journalBodyTextView" destination="a6m-HS-mVq" id="8Ut-TS-Oqc"/>
                         <outlet property="journalTitleTextField" destination="pGY-V9-T7x" id="q1R-QH-qQd"/>
+                        <outlet property="moodControl" destination="NO9-7t-WxX" id="Otc-Rq-ifJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
